# Tone_Classifier

./: .gitignore  README.md  WEEK8_BLOG.md  export_batch_report_md.py  modal_app.py  model_train.ipynb  neutralization_table.csv  neutralized_to_csv.py  pyproject.toml  requirements.txt  run_attribution_example.py  run_batch_attribution_modal.py  run_iterative_neutralizer_hybrid_modal.py  run_iterative_neutralizer_modal.py  run_train_modal.py
context_cite/: quickstart_example.ipynb
data_multisource_wiki_se/: source_stats.json  test.csv  train.csv  valid.csv
data_paradetox/: train.csv  valid.csv
data_politepeer_extreme/: full_test.csv  modified_ruder_dataset_v2.csv  source_stats.json  test.csv  train.csv  valid.csv
data_sources/: politepeer.csv
src/politeness_classifier/: train.py  tune.py
src/tone_classifier/: attention_attribution.py  attribution.py  attribution_ranking.py  data.py  export_pt.py  modeling.py  predict.py  prepare_data.py  prepare_data_multisource.py  train.py  train_mlm.py  tune.py
